# uriparser

./: .gitignore  CMakeLists.txt  README.md
src/: UriMemory.c
